app/habmin.css
#splashscreen {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 99;
    margin-top: 10%;
    background-color: white;
    vertical-align: middle;
    margin: auto;
}

.x-grid-row-selected-override .x-grid-cell {
    background-color: #00ff99;
}

.x-grid-row-selected-override .x-grid-cell-first {
    background-color: #00ff99;
    border-radius: 8px 0px 0px 8px;
}

.x-grid-row-selected-override .x-grid-cell-last {
    background-color: #00ff99;
    border-radius: 0px 8px 8px 0px;
}

.x-action-col-cell img {
    height: 16px;
    width: 16px;
    cursor: pointer;
}

.x-action-col-cell img.chartAxis1 {
    background-image: url(../images/chart_yaxis.png);
}

.x-action-col-cell img.chartAxis2 {
    background-image: url(../images/chart_yaxis2.png);
}

.x-ie6 .x-action-col-cell img.chartAxis1 {
    background-image: url(../images/chart_yaxis.png);
}

.x-ie6.x-action-col-cell img.chartAxis2 {
    background-image: url(../images/chart_yaxis2.png);
}

.x-ie6 .x-action-col-cell img {
    position: relative;
    top: -1px;
}

.x-tree-lines img.sitemap-sitemap {
    width: 16px;
    background-image: url(../images/maps-stack.png)
}

.x-tree-lines img.widget-group {
    width: 16px;
    background-image: url(../images/ui-scroll-pane.png)
}

.x-tree-lines img.widget-frame {
    width: 16px;
    background-image: url(../images/ui-group-box.png)
}

.x-tree-lines img.widget-switch {
    width: 16px;
    background-image: url(../images/switch.png)
}

.x-tree-lines img.widget-setpoint {
    width: 16px;
    background-image: url(../images/ui-scroll-bar.png)
}

.x-tree-lines img.widget-text {
    width: 16px;
    background-image: url(../images/edit.png)
}

.x-tree-lines img.widget-chart {
    width: 16px;
    background-image: url(../images/chart-up.png)
}

.x-tree-lines img.widget-colorpicker {
    width: 16px;
    background-image: url(../images/color.png)
}

.x-tree-lines img.widget-video {
    width: 16px;
    background-image: url(../images/film.png)
}

.x-tree-lines img.widget-slider {
    width: 16px;
    background-image: url(../images/ui-slider.png)
}

.x-tree-lines img.widget-selection {
    width: 16px;
    background-image: url(../images/ui-combo-box-blue.png)
}

.x-tree-lines img.widget-image {
    width: 16px;
    background-image: url(../images/picture.png)
}

.x-tree-lines img.widget-webview {
    width: 16px;
    background-image: url(../images/globe.png)
}

.x-tool-tick {
    background-image: url(../images/tick.png) !important;
}

.x-tool-cross {
    background-image: url(../images/cross.png) !important;
}

.x-tool-disk {
    background-image: url(../images/disk.png) !important;
}

.x-tool-expand {
    background-image: url(../images/ui-accordion.png) !important;
}

.x-message-box .icon-download {
    background: url("../images/system-monitor-24.png") no-repeat scroll 6px 0px transparent;
    height: 24px !important;
}

.x-message-box .icon-error {
    background: url("../images/cross-circle-24.png") no-repeat scroll 6px 0px transparent;
    height: 24px !important;
}

.x-message-box .icon-warning {
    background: url("../images/exclamation-24.png") no-repeat scroll 6px 0px transparent;
    height: 24px !important;
}

.x-message-box .icon-ok {
    background: url("../images/tick-24.png") no-repeat scroll 6px 0px transparent;
    height: 24px !important;
}

.x-config-icon-domain {
    background-image: url('../images/node.png');
}

.x-grid-tree-node-expanded .x-config-icon-domain {
    background-image: url('../images/node-select-child.png');
}

.x-config-icon-readonly {
    background-image: url('../images/tag.png');
}

.x-config-icon-editable {
    background-image: url('../images/pencil-small.png');
}

.sitemap-label-default {
    margin-left: 20px;
    color: #C0C0C0
}

.sitemap-label-set {
    margin-left: 20px;
}

.openhab_pictogram {
    -webkit-mask-position: center;
    -webkit-mask-repeat: no-repeat;
    -webkit-mask-size: contain;
@include background-gradient($ active-color, 'recessed');
}

body .ux-notification-success {
    background-image: url('../images/fader-success.png');
}

.ux-notification-success .x-window-body {
    text-align: center;
    padding: 0px 5px 5px 5px;
    background-color: transparent;
    border: 0px solid white;
}

.ux-notification-success .x-window-header {
    background-color: transparent;
}

.ux-notification-success-icon {
    background-image: url('../images/tick.png');
}

body .ux-notification-warning {
    background-image: url('../images/fader-warning.png');
}

.ux-notification-warning .x-window-body {
    text-align: center;
    padding: 0px 5px 5px 5px;
    background-color: transparent;
    border: 0px solid white;
}

.ux-notification-warning .x-window-header {
    background-color: transparent;
}

.ux-notification-warning-icon {
    background-image: url('../images/exclamation.png');
}

body .ux-notification-error {
    background-image: url('../images/fader-error.png');
}

.ux-notification-error .x-window-body {
    text-align: center;
    padding: 0px 5px 5px 5px;
    background-color: transparent;
    border: 0px solid white;
}

.ux-notification-error .x-window-header {
    background-color: transparent;
}

.ux-notification-error-icon {
    background-image: url('../images/cross.png');
}

body .ux-notification-info {
    background-image: url('../images/fader-info.png');
}

.ux-notification-info .x-window-body {
    text-align: center;
    padding: 0px 5px 5px 5px;
    background-color: transparent;
    border: 0px solid white;
}

.ux-notification-info .x-window-header {
    background-color: transparent;
}

.ux-notification-info-icon {
    background-image: url('../images/information-balloon.png');
}

.tip {
    color: #111;
    width: 139px;
    background-color: white;
    border: 1px solid #ccc;
    -moz-box-shadow: #555 2px 2px 8px;
    -webkit-box-shadow: #555 2px 2px 8px;
    -o-box-shadow: #555 2px 2px 8px;
    box-shadow: #555 2px 2px 8px;
    opacity: 0.9;
    filter: alpha(opacity=90);
    font-size: 10px;
    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
    padding: 7px;
    text-align: left;
    width: auto;
    max-width: 500px;
}

#inner-details {
    font-size: 12px;
}

.tip-title {
    font-size: 11px;
    text-align: center;
    margin-bottom: 2px;
}

#form-title {
    font-size: 4px;
    font-weight: normal;
}

.save-chart-form .x-panel-header-text-container-default {
    color: #333333;
    font-size: 10px;
    font-weight: normal;
    line-height: 15px;
    background-color: #e4f3ff;
}

.grid-ok .x-grid-cell-inner-treecolumn {
    background-image: url('../images/status.png');
    background-repeat: no-repeat;
    background-position: right 5px top;
}

.grid-warning .x-grid-cell-inner-treecolumn {
    background-image: url('../images/status-away.png');
    background-repeat: no-repeat;
    background-position: right 5px top;
}

.grid-error .x-grid-cell-inner-treecolumn {
    background-image: url('../images/status-busy.png');
    background-repeat: no-repeat;
    background-position: right 5px top;
}

.grid-initializing .x-grid-cell-inner-treecolumn {
    background-image: url('../images/status-offline.png');
    background-repeat: no-repeat;
    background-position: right 5px top;
}

.grid-database .x-grid-cell-inner {
    background-image: url('../images/database-small.png');
    background-repeat: no-repeat;
    background-position: right 5px top;
}

.zwave-status-idle {
	background-color: #7A7676;
	color: #ffffff;
}
.zwave-status-include {
	background-image: url('../images/loading-square.gif') !important;
	background-size: 20px 20px;

}
.zwave-status-exclude {
	background-image: url('../images/loading-square.gif') !important;
	background-size: 20px 20px;

}
.zwave-status-healing {
	background-image: url('../images/loading-small.gif') !important;
	background-size: 20px 20px;

}
.zwave-status-init {
	background-image: url('../images/loading-small.gif') !important;
	background-size: 20px 20px;

}
.zwave-status-ready {
	background-image: url('../images/tick.png') !important;
	background-size: 20px 20px;

}
.zwave-status-notready {
	background-image: url('../images/cross.png') !important;
	background-size: 20px 20px;

}
.zwave-inclusion-btn {
	width: 63px !important;
	height: 63px !important;
	background-color: #ffffff; !important;
	background-image: none !important;
	border-style: none !important;
	position: absolute;
	float: right;
	right: 20px;
	top: 0px;
	cursor: default;
}
.zwave-inclusion-stopped {
	background-image: url('../images/tick-large.png') !important;
	background-size: 50px 50px;
	width: 63px !important;
	height: 63px !important;
}
.zwave-inclusion-running {
	background-image: url('../images/loading-large.gif') !important;
	background-size: 50px 50px;
	width: 63px !important;
	height: 63px !important;
}
.zwave-status-red {
	background-color: #CC0000;
}

.x-btn-default-toolbar-small-icon-text-left .x-btn-icon-el {
	width: 20px;
}

